# wb-hometask-13

./: docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 12485883c452_init.py  92a45f303138_init.py  e2874c9c1ba9_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: 1247  1249  1249_fsm  1259  1259_fsm  16394  16397  16399  16401  16407  16408  16410  16412  16414  16420  16421  16423  16430  16431  2224  24576  24578  24583  24584  24586  24588  24591  24593  24595  24597  24600  24602  24609  24611  24616  24618  24623  24625  24627  24632  (+83 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_unit_repository_contacts.py  test_unit_repository_users.py
